# agentic_RAG

./: Notes.txt  ingestion.py  main.py  pyproject.toml
.chroma/bcfb5979-06f9-491f-87af-3b46773e72fa/: index_metadata.pickle
graph/: consts.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
